--- a/Part 2/my-mongo-app/package.json
+++ b/Part 2/my-mongo-app/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.36.2",
     "@prisma/client": "^7.1.0",
     "antd": "^6.1.0",
     "mongodb": "^7.0.0",
